--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     background-color: #d9dcd6;
+    min-width: 1200px;
 }
 
 .header {
@@ -13,6 +14,8 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    /* display: inline-block; */
+
 }
 
 .header h1 {
@@ -21,7 +24,8 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    /* color: #d9dcd6; */
+    color: #2589bd;
 }
 
 .header div {
@@ -39,6 +43,7 @@ body {
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
+    /* float: left; */
 }
 
 a {
